--- a/src/components/ThreeJs/ThreeJs.css
+++ b/src/components/ThreeJs/ThreeJs.css
@@ -2,7 +2,7 @@
 
 :root {
     --color-primary: #A099FB;
-    --color-primary-dark: #6C5CEA;
+    --color-primary-dark: #cea56d;
     --color-light: #fff;
     --color-dark: #444;
     --color-secondary-light: #FEB6D3;
@@ -31,64 +31,125 @@ body {
     outline: none;
 }
 
-.btn-primary {
-    background: #fff;
-    color: #4f4d4d;
-}
-
-.btn-primary.btn-layer-1_1 i {
+.btn-check {
+    background: #af8b74;
+    color: #ffffff;
+    font-size: 19px;
     position: relative;
-    left: 30px;
-    padding: inherit;
-    background-color: var(--color-primary-dark);
-    color: var(--color-primary);
+    bottom: 0;
     border-radius: 5px;
+    width: 70px;
+    height: 30px;
+    border: none;
 }
 
-/* BUTTON ROW 3 STYLE */
-.btn-primary.btn-layer-3_1 {
-    box-shadow: 0 0 12px rgba(var(--color-primary-dark), .33);
+.btn-check1 {
+    background: #af8b74;
+    color: #ffffff;
+    font-size: 13px;
+    position: absolute;
+    bottom: 1%;
+    right: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    width: 80px;
+    height: 35px;
+    border: none;
 }
 
-.btn-primary.btn-layer-3_1 i {
-    position: relative;
-    left: 30px;
-    padding: inherit;
-    background: var(--color-primary-dark);
-    color: var(--color-primary);
+.btn-primary1 {
+    background: #af8b74;
+    color: #ffffff;
     border-radius: 5px;
+    margin-left: 10px;
+    width: 40px;
+    height: 40px;
+    border: none;
 }
+
 
 .button-plus{
-    margin-left: 10px;
+    background: #af8b74;
+    color: #ffffff;
+    position: relative;
+    bottom: 50%;
+
+}
+
+.labelStyle {
+    display: flex;
+    justify-content: center;
+    color: white;
+    border-radius: 5px;
 }
 
 
 .text_room {
-    width: 100%;
-    padding: 1.2rem;
+    text-align: center;
+    width: 200px;
+    height: 40px;
     border-radius: 9px;
     border: none;
-    margin-bottom: 10px;
+    color: black;
+    font-weight: bold;
+    font-size: 20px;
+    position: relative;
+    top: 10px;
 }
+
+.text_room1 {
+    text-align: center;
+    width: 200px;
+    height: 35px;
+    border-radius: 9px;
+    border: none;
+    background-color: white;
+    color: black;
+    font-weight: bold;
+    font-size: 20px;
+    position: absolute;
+    top: 40%;
+    right: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 
 .text_key{
-    width: 30%;
-    height: 20px;
-    padding: 1.2rem;
+    width: 100px;
+    height: 35px;
     border-radius: 9px;
     border: none;
-    margin-bottom: 10px;
+    position: absolute;
+    bottom: 30%;
+    transform: 'translate(-50%, -50%)';
+    right : 50%;
+    left : 10%;
+    background-color: #fff;
 }
 
-.text_value{
-    width: 50%;
-    height: 20px;
-    padding: 1.2rem;
+.text_key1 {
+    width: 100px;
+    height: 30px;
     border-radius: 9px;
     border: none;
     margin-bottom: 10px;
-    margin-left: 10px;
+    color: white;
+}
+
+
+.text_value{
+    width: 100px;
+    height: 35px;
+    border-radius: 9px;
+    border: none;
+    position: absolute;
+    bottom: 30%;
+    transform: 'translate(-50%, -50%)';
+    right : 50%;
+    left : 55%;
+    background-color: #fff;
 }
 
 .btn-primary.btn_remove i {
@@ -101,11 +162,105 @@ body {
     border: none
 }
 
-.btn-send{
-    margin-right: 10px;
+.btn-send_UploadModal{
+    background-color: #522b07;
+    width: 60px;
+    height: 45px;
+    color: white;
+    border-radius: 15px;
+    font-size: 18px;
+    border: none;
+    font-weight: bold;
+}
+
+.btn_back {
+    border: none;
+    background-color: transparent;
+    font-weight: bold;
+    font-size: 20px;
+    position: fixed;
+    left: 1%;
+    top: 9%
 }
 
 
+.input {
+    width: auto;
+    height: auto;
+    border-radius: 10px;
+    position: absolute;
+    top : 50%;
+    left : 30%;
+    background-color: rgba(106,36,3,0.89);
+}
+
+
+.btn_Close {
+    background: #af8b74;
+    color: #ffffff;
+    font-size: 19px;
+    position: relative;
+    padding: inherit;
+    border-radius: 5px;
+    width: 70px;
+    height: 30px;
+    border: none;
+}
+
+.btn_back {
+    border: none;
+    background-color: transparent;
+    font-weight: bold;
+    font-size: 20px;
+    position: fixed;
+    left: 1%;
+    top: 1%
+}
+
+.btn_search{
+    margin-left: 7px;
+    margin-right: 10px;
+    background: #af8b74;
+}
+
+.input_search {
+    width: 60%;
+    height: 20px;
+    padding: 1.2rem;
+    border-radius: 9px;
+    border: none;
+    margin-bottom: 10px;
+}
+
+.btn_search_cancel{
+    background-color: white;
+    color: #af8b74;
+}
+
+.btn-check1 {
+    background: #af8b74;
+    color: #ffffff;
+    font-size: 13px;
+    position: absolute;
+    bottom: 0;
+    right: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    width: 80px;
+    height: 35px;
+    border: none;
+}
+
+.input1 {
+    width: 300px;
+    height: 250px;
+    border-radius: 10px;
+    position: absolute;
+    top : 50%;
+    left : 30%;
+    background-color: rgba(106,36,3,0.89);
+}
 
 
 
