--- a/src/components/UploadModal/UploadModal.css
+++ b/src/components/UploadModal/UploadModal.css
@@ -1,4 +1,3 @@
-
 .building_name{
     width: 30%;
     height: 20px;
@@ -20,14 +19,20 @@
 
 .btn-add{
     margin-right: 10px;
+    background-color: white;
+    color: #522b07;
 }
 .btn-minus{
+    background-color: white;
+    color: #522b07;
 }
 
 .btn-x{
+    border: none;
     position: absolute;
-    right: 10px;
-    top: 1px;
-    background-color: #B0E0E6;
-    color: gray;
+    right: 1%;
+    top: 1%;
+    background-color: transparent;
+    color: #522b07;
+    font-size: 30px;
 }
