--- a/src/components/ThreeJs/ThreeJs.css
+++ b/src/components/ThreeJs/ThreeJs.css
@@ -1,5 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Alatsi|Poppins&display=swap');
 
+.text_key::placeholder {
+    color: white; /* 변경하려는 색상 */
+}
+
+.text_key:disabled {
+    color: white; /* 변경하려는 색상 */
+}
+
+.text_value::placeholder {
+    color: white; /* 변경하려는 색상 */
+}
+
+.text_value:disabled {
+    color: white; /* 변경하려는 색상 */
+}
+
 :root {
     --color-primary: #A099FB;
     --color-primary-dark: #cea56d;
@@ -38,15 +54,15 @@ body {
     position: relative;
     bottom: 0;
     border-radius: 5px;
-    width: 70px;
-    height: 30px;
+    width: 80px;
+    height: 40px;
     border: none;
 }
 
 .btn-check1 {
     background: #af8b74;
     color: #ffffff;
-    font-size: 13px;
+    font-size: 12px;
     position: absolute;
     bottom: 1%;
     right: 50%;
@@ -68,7 +84,6 @@ body {
     border: none;
 }
 
-
 .button-plus{
     background: #af8b74;
     color: #ffffff;
@@ -84,7 +99,6 @@ body {
     border-radius: 5px;
 }
 
-
 .text_room {
     text-align: center;
     width: 200px;
@@ -99,57 +113,63 @@ body {
 }
 
 .text_room1 {
-    text-align: center;
     width: 200px;
-    height: 35px;
+    height: 40px;
     border-radius: 9px;
     border: none;
-    background-color: white;
     color: black;
     font-weight: bold;
     font-size: 20px;
     position: absolute;
-    top: 40%;
-    right: 50%;
-    left: 50%;
+    top: 30%;
+    left : 50%;
+    right : 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
-
 .text_key{
-    width: 100px;
-    height: 35px;
+    width: 110px;
+    height: 20px;
+    padding: 1.2rem;
     border-radius: 9px;
     border: none;
-    position: absolute;
-    bottom: 30%;
-    transform: 'translate(-50%, -50%)';
-    right : 50%;
-    left : 10%;
-    background-color: #fff;
+    margin-bottom: 10px;
 }
 
 .text_key1 {
     width: 100px;
-    height: 30px;
+    height: 20px;
+    padding: 1.2rem;
     border-radius: 9px;
     border: none;
     margin-bottom: 10px;
-    color: white;
+    position: absolute;
+    top: 30%;
+    left: 20%;
 }
 
 
 .text_value{
+    width: 150px;
+    height: 20px;
+    padding: 1.2rem;
+    border-radius: 9px;
+    border: none;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+
+.text_value1{
     width: 100px;
-    height: 35px;
+    height: 40px;
     border-radius: 9px;
     border: none;
     position: absolute;
-    bottom: 30%;
-    transform: 'translate(-50%, -50%)';
-    right : 50%;
-    left : 55%;
-    background-color: #fff;
+    top: 30%;
+    right: 20%;
+    color: white;
+    text-align: center;
 }
 
 .btn-primary.btn_remove i {
@@ -183,7 +203,6 @@ body {
     top: 9%
 }
 
-
 .input {
     width: auto;
     height: auto;
@@ -194,6 +213,19 @@ body {
     background-color: rgba(106,36,3,0.89);
 }
 
+.input1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-top: 50px;
+    margin-right: 200px;
+    width: 370px;
+    padding: 36px 48px 48px 48px;
+    border-radius: 11px;
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+    color: white;
+    font-size: large;
+}
 
 .btn_Close {
     background: #af8b74;
@@ -237,36 +269,8 @@ body {
     color: #af8b74;
 }
 
-.btn-check1 {
-    background: #af8b74;
-    color: #ffffff;
-    font-size: 13px;
-    position: absolute;
-    bottom: 0;
-    right: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 5px;
-    width: 80px;
-    height: 35px;
-    border: none;
+.modal-header{
+    display: flex;
+    justify-content: center;
+    font-size : 30px;
 }
-
-.input1 {
-    width: 300px;
-    height: 250px;
-    border-radius: 10px;
-    position: absolute;
-    top : 50%;
-    left : 30%;
-    background-color: rgba(106,36,3,0.89);
-}
-
-
-
-
-
-
-
-
-
