--- a/src/pages/UserPage.css
+++ b/src/pages/UserPage.css
@@ -3,6 +3,20 @@
     height: 100%;
 }
 
+/* 기본 스타일 */
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+/* 모바일 화면에서의 스타일 */
+@media only screen and (max-width: 600px) {
+    .container {
+        width: 100%;
+        padding: 10px;
+    }
+}
+
 .content {
     top : 50%;
     left : 50%;
