--- a/src/components/ThreeJs/ThreeJs.css
+++ b/src/components/ThreeJs/ThreeJs.css
@@ -218,12 +218,10 @@ body {
     flex-direction: column;
     justify-content: flex-end;
     margin-top: 50px;
-    margin-right: 200px;
     width: 370px;
     padding: 36px 48px 48px 48px;
     border-radius: 11px;
     box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
-    color: white;
     font-size: large;
 }
 
@@ -273,4 +271,10 @@ body {
     display: flex;
     justify-content: center;
     font-size : 30px;
+    color: white;
+}
+
+.back_icon{
+    font-size : 25px;
+    margin-right : 3px;
 }
